# bopforge

./: .gitignore  pyproject.toml
.github/workflows/: build.yml
data/: input_requirements.md
data/categorical/: README.md  settings.yaml  wash_water-diarrhea.csv
data/continuous/: README.md  diet_veg-cvd_ihd.csv  settings.yaml
data/dichotomous/: settings.yaml  smoking_direct-hip_fracture.csv
sphinx/: installation.rst
sphinx/api_reference/: categorical_pipeline.rst  continuous_pipeline.rst  dichotomous_pipeline.rst
src/bop_pipeline/continuous_pipeline/: __main__.py  functions.py
src/bop_pipeline/dichotomous_pipeline/: __main__.py  functions.py
src/bopforge/: base_pipeline.py  utils.py
src/bopforge/categorical_pipeline/: __main__.py  cli.py  functions.py
src/bopforge/continuous_pipeline/: __main__.py  cli.py  functions.py
src/bopforge/dichotomous_pipeline/: __main__.py  cli.py  functions.py
tests/: test_utils.py
